--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.css.map
+**.css.map
+**.sass-cache
+**.sass-cache/*
 
 npm-debug.log*
 yarn-debug.log*
